Bug 1674597 - part2 : refactor `AudioSinkWrapper::Start` in order to remove unnecessary indentation. r=padenot

Having an early return in an inner if section isn't a good thing, re-arrange them in order to move it out.

Differential Revision: https://phabricator.services.mozilla.com/D96469